--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,13 @@
 -e .
 
 # external requirements
-click
+click~=7.1.2
 Sphinx
 coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+streamlit~=1.35.0
+setuptools~=69.5.1
+paperswithcode-client~=0.3.1
