--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,8 @@ streamlit~=1.35.0
 setuptools~=69.5.1
 paperswithcode-client~=0.3.1
 pandas~=2.2.2
+click~=7.1.2
+python-dotenv~=1.0.1
+openai~=1.35.2
+tenacity~=8.3.0
+plotly~=5.22.0
